[package]
authors = ["Robin Grell <grellr@hochschule-trier.de>"]
categories = ["internationalization", "gui"]
description = "Keyboard built from scratch with modern features like Next Word Prediction and gesture recognition in mind"
license = "GPL-3.0"
name = "fingerboard"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
memmap2 = "0.5"
home = "0.5"
bitflags = "1.2"
ctrlc = "3.2"
glib = "0.17.2"
gdk-sys = "0.16.0"
gdk = "0.16.0"
gtk = "0.16.1"
cairo-rs = { version = "0.16.7", optional = true }
relm = "0.24.0"
relm-derive = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.13"
log = "0.4"
pretty_env_logger = "0.4"
gtk-layer-shell = "0.5.1"
wayland-client = { version = "0.29", features = ["use_system_lib"] }
wayland-protocols = { version = "0.29", features = [
    "client",
    "unstable_protocols",
] }
zwp-virtual-keyboard = "0.2"
input_event_codes_hashmap = "0.1"
tempfile = "3.3"
dbus = "0.9"
dbus-crossroads = "0.5"
locale_config = "0.3"
zwp-input-method-service = "0.5"
envmnt = "0.10.4"
input_decoder = { git = "https://github.com/grelltrier/input_decoder" }
path_gen = { git = "https://github.com/grelltrier/path_gen" }

[features]
# None of the optional features are activated by default
default = ["gesture"]

# Activates gesture feature
# Currently there will only be the path painted but no gesture detection. This will change within the next few months
gesture = ["cairo-rs", "suggestions"]

# Suggestions are not functional yet so they can be ignored
suggestions = []
